# workcell

./: .codespellrc  .dockerignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  NOTICE  README.md  RESUME-1.0-gate.md  ROADMAP.md  SECURITY.md  SUPPORT.md  build_and_test.sh  go.mod  go.sum  install.sh
.githooks/: pre-commit
.github/: CODEOWNERS  dependabot.yml  dependency-review-config.yml  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  usage_question.md
.github/workflows/: bench.yml  ci-insights.yml  ci.yml  codeql.yml  docs.yml  fuzz.yml  hosted-controls.yml  macos-boundary.yml  mutation.yml  pin-hygiene.yml  pr-base-policy.yml  (+5 more)
adapters/: README.md
docs/: 1.0-readiness-review-draft.md  adapter-control-planes.md  apple-container-evaluation.md  aws-ec2-ssm-preview.md  b6-disposition-options-draft.md  ci-efficiency-and-reliability.md  ci-threat-model.md  copilot-linux-local-compat-plan.md  diagnostics-and-support-matrix.md  docker-desktop-compat.md  egress-policy.md  enterprise-evidence-baseline.md  enterprise-rollout.md  extending-adapters.md  fuzzing.md  gcp-vm-preview.md  getting-started.md  github-workflows.md  host-expansion-readiness.md  host-support-matrix.md  implement-first-delivery-plan.md  improvement-tracks-implementation-plan.md  incident-response.md  injection-policy.md  install-lifecycle.md  install.md  invariants.md  launcher-contract.md  managed-workstation-contract.md  mode-map.md  onboarding-and-auth.md  outbound-endpoints.md  owasp-agentic-mapping.md  provenance.md  provider-bootstrap-matrix.md  provider-matrix.md  provider-quickstarts.md  release-posture.md  releasing.md  remote-vm-contract.md  (+19 more)
man/: workcell.1
policy/: README.md  allowed-actions.toml  forbidden-host-paths.toml  git-config-blocklist.toml  github-hosted-controls.toml  hardening-profile.toml  host-support-matrix.tsv  mutation-score-policy.json  operator-contract.toml  provider-bumps.toml  public-contract.toml  remote-vm-contract.json  requirements.toml  retention-policy.json  reviewer-identities.toml  tool-pins.toml  workflow-lane-policy.json  workflow-lanes.json
runtime/: README.md
runtime/container/rust/: Cargo.toml
runtime/container/rust/.cargo/: config.toml
runtime/container/rust/fuzz/: .gitignore  Cargo.toml
runtime/container/rust/fuzz/corpus/env_filtering/: git-config-parameters  git-index-file  path-basic  regression-multibyte-pager-key
runtime/container/rust/fuzz/corpus/git_config_parsing/: credential-helper  fsmonitor-false  includeif-gitdir
runtime/container/rust/fuzz/corpus/path_classification/: workcell-real-git
runtime/container/rust/fuzz/fuzz_targets/: env_filtering.rs  git_config_parsing.rs  path_classification.rs
runtime/container/rust/src/: gitpolicy.rs  lib.rs
scripts/: bootstrap-dev.sh  build-and-test.sh  check-dead-code.sh  check-doc-links.sh  check-doc-support-matrix-fields.sh  check-pinned-inputs.sh  check-pr-shape.sh  check-public-contract.sh  check-public-repo-hygiene.sh  check-publish-commit-signatures.sh  check-release-tag-signature.sh  check-repo-readiness.sh  check-retention-policy.sh  check-workflows.sh  ci-plan.sh  colima-egress-allowlist.sh  container-smoke.sh  dev-quick-check.sh  dev-remote-validate.sh  generate-build-input-manifest.sh  generate-builder-environment-manifest.sh  generate-control-plane-manifest.sh  generate-homebrew-formula.sh  generate-host-support-matrix-doc.sh  generate-release-checksums.sh  generate-workflow-lane-manifest.sh  go-port-validate.sh  install-dev-tools.sh  install-release.sh  install-workcell.sh  install.sh  lint-dockerfiles.sh  pre-merge.sh  provider-e2e.sh  publish-github-release.sh  publish-provider-bump-pr.sh  publish-upstream-refresh-pr.sh  repo-publish-pr.sh  retry.sh  run-hosted-controls-audit.sh  (+29 more)
workflows/: adapter-porting.md  go-porting.md  python-to-go-migration.md
(+518 files in other folders)
