[package]
name = "workcell-runtime"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "workcell_exec_guard"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "workcell-launcher"
path = "src/bin/workcell-launcher.rs"

[[bin]]
name = "workcell-git-launcher"
path = "src/bin/workcell-git-launcher.rs"

[dependencies]
libc = "0.2.177"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
