[package]
name = "workcell-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
publish = false

[lib]
name = "workcell_exec_guard"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "workcell-launcher"
path = "src/bin/workcell-launcher.rs"

[dependencies]
libc = "0.2.177"

[lints.clippy]
# A4: every `unsafe {}` block must carry a `// SAFETY:` comment stating the
# invariant that makes it sound. This is a restriction lint (allow by default),
# enabled here as the enforcement for the unsafe-code audit. Note this lint does
# NOT cover `unsafe extern` blocks; those are guarded in scripts/validate-repo.sh.
undocumented_unsafe_blocks = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
