[package]
name = "workcell-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
publish = false

[lib]
name = "workcell_exec_guard"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "workcell-launcher"
path = "src/bin/workcell-launcher.rs"

[dependencies]
libc = "0.2.177"

[lints.rust]
# `cfg(fuzzing)` is set by cargo-fuzz for the fuzz build (see `fuzz/`) to gate
# the `fuzz_api` re-export module. Register it so the normal build/test/clippy
# lanes do not warn about the otherwise-unknown cfg name.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
# A4: every `unsafe {}` block must carry a `// SAFETY:` comment stating the
# invariant that makes it sound. This is a restriction lint (allow by default),
# enabled here as the enforcement for the unsafe-code audit. Note this lint does
# NOT cover `unsafe extern` blocks; those are guarded in scripts/validate-repo.sh.
undocumented_unsafe_blocks = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
