[package]
name = "workcell-runtime-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.workcell-runtime]
path = ".."

[[bin]]
name = "path_classification"
path = "fuzz_targets/path_classification.rs"
test = false
doc = false
bench = false

[[bin]]
name = "env_filtering"
path = "fuzz_targets/env_filtering.rs"
test = false
doc = false
bench = false

[[bin]]
name = "git_config_parsing"
path = "fuzz_targets/git_config_parsing.rs"
test = false
doc = false
bench = false
